   mozjpeg

 - the libjpeg_version() method replaces the old
   Imager::File::JPEG::i_libjpeg_version() function, and the format
   has changed.

 - add support for JPEG arithmetic coding when the supplied libjpeg
   supports it.  Note that not all JPEG decoders can handle arithmetic
   coded JPEGs.

 - add support for disabling the JFIF header for JPEG files using the
   jpeg_jfif tag.

Imager 1.014 - 28 Apr 2022
============

Bug fixes:

 - fix failed to build on non-threaded perls.
   https://github.com/tonycoz/imager/issues/472

 - when writing a paletted image with an alpha channel to PNG only
   set the tRNS chunk if the image has transparent colours.  With
   older libpng this could add an erroneous tRNS chunk (or possibly
   undefined behaviour if I understand the libpng code).
   https://github.com/tonycoz/imager/issues/459

Features:

 - Imager::Color and Imager::Color::Float objects can now be created
   from CSS style rgb(...) strings.
   https://github.com/tonycoz/imager/issues/463

 - added the as_css_rgb() method to both Imager::Color and
   Imager::Color::Float to format the supplied color as a CSS style
   rgb() string.
   https://github.com/tonycoz/imager/issues/463

 - Imager::Color and Imager::Color::Float objects can now be created
   (copied) or set from other Imager::Color or Imager::Color::Float
   objects.

Imager 1.013 - 27 Apr 2022
============

 - added rgb_difference() method
   Thanks to Andreas König
   https://github.com/tonycoz/imager/pull/462

 - update ppport.h to prevent a redefinition diagnostic

 - update bug tracker URLs to point at github
   https://github.com/tonycoz/imager/pull/466

 - update some other bug tracker URLs too.

 - add the trim() and trim_rect() methods, to trim borders off an
   image.

 - add the as_float() method to Imager::Color and the as_8bit() method
   to Imager::Color::Float to convert between the two types.

 - update ppport.h to avoid a diagnostic in more modern perls.
