@@ -746,6 +746,12 @@ but your experience may differ.
 This will prevent the C<i_xres>, C<i_yres> and C<jpeg_density_units>
 tags from having an effect.
 
+=item *
+
+C<jpeg_smooth> - if set to a value from 1 to 100 apply smoothing to
+the image to eliminate dithering noise (without modifying the Imager
+image).  Default: 0 (no smoothing).
+
 =back
 
 When reading a JPEG image, the following tag will be set, and ignored
