@@ -25,6 +25,9 @@ Imager-File-JPEG 0.96
  - add support for disabling the JFIF header for JPEG files using the
    jpeg_jfif tag.
 
+ - add support for smoothing to eliminate dithering noise (like cjpeg
+   -smooth) using the jpeg_smooth tag.
+
 Imager-File-JPEG 0.95
 =====================
 
